# internal/entity/stats.go
@@ -1,7 +1,7 @@
 package entity
 
 type Stats struct {
-	CountMedia    int
-	CountAlbum    int
-	TimelineYears []int
+	Years      []int
+	CountMedia int
+	CountAlbum int
 }
